[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librawincov"
version = "0.1.0"
description = "Convert DOCX files to PDF using LibreOffice with WSL fallback support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["docx", "pdf", "convert", "libreoffice", "wsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/librawincov"
Repository = "https://github.com/yourusername/librawincov"
Issues = "https://github.com/yourusername/librawincov/issues"

[project.scripts]
librawincov = "librawincov.cli:main"
